--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"react-scripts": "3.4.1"
 	},
 	"scripts": {
-		"dev": "react-scripts start",
-		"start": "serve -s build",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
