--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ gunicorn==20.0.4
 Twisted==20.3.0
 channels==2.4.0
 channels-redis==2.4.2
+google-api-python-client==1.9.1
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+apiclient==1.0.4
